tests/compile-fail/integration__integration__type_check__non_void_expr_statement.snap
---
source: tests/integration/type_check.rs
expression: stderr
---
error: type error
   ┌─ <input>:29:9
   │
29 │         3.0;
   │         ^^^ a float
   │
   = expression statements must be of void type


